--- a/视觉学习.md
+++ b/视觉学习.md
@@ -24,7 +24,8 @@
 
 完成c++和OpenCV学习之后完成的作业：
 
-读懂装甲板检测识别模块代码
+1、读懂装甲板检测识别模块代码(把陈君的识别部分代码整明白就好了)
+2、自己新建工程完成装甲板检测（可以参考陈君的代码，装甲板识别依据问学长）
 
 ## 卡尔曼滤波：
 
