--- a/视觉学习.md
+++ b/视觉学习.md
@@ -1,5 +1,3 @@
-###视觉学习路线及资源
-
 ## C++：
 
 作用：后面几乎所有学习的基础
@@ -9,6 +7,16 @@
 【黑马程序员匠心之作|C++教程从0到1入门编程,学习编程不再难】 https://www.bilibili.com/video/BV1et411b73Z/?share_source=copy_web&vd_source=d1e009479ae2a402bba2a4343b5d75dd
 
 重点学习：类、容器（主要是vector）
+
+
+
+## Python：
+
+作用：编写神经网络
+
+暂无推荐资源
+
+
 
 ## OpenCV：
 
@@ -24,10 +32,13 @@
 
 完成c++和OpenCV学习之后完成的作业：
 
-1、读懂装甲板检测识别模块代码(把陈君的识别部分代码整明白就好了)
-2、自己新建工程完成装甲板检测（可以参考陈君的代码，装甲板识别依据问学长）
+读懂装甲板检测识别模块代码
+
+
 
 ## 卡尔曼滤波：
+
+作用：预测
 
 如果想完完全全搞明白就看这个（建议两个都看一遍，一遍可能不够~）：
 
@@ -51,6 +62,8 @@ https://www.bilibili.com/video/BV1eE41147wK/?share_source=copy_web&vd_source=d1e
 
 矩阵加法、乘法、转置、单位矩阵
 
+
+
 ## ROS2：
 
 如果你喜欢看文档学习：
@@ -73,7 +86,13 @@ https://docs.ros.org/en/humble/Tutorials/Intermediate/Tf2/Tf2-Main.html
 
 [tf2 [5897] &mdash; ROS 2 Documentation: Humble 文档](http://fishros.org/doc/ros2/humble/dev/Tutorials/Intermediate/Tf2/Tf2-Main.html)
 
+
+
 ## 神经网络：
+
+先看这个系列视频，打好基础：
+
+[P1. PyTorch环境的配置及安装（Configuration and Installation of PyTorch)【PyTorch教程】_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1hE411t7RN?p=1&vd_source=86fa03c233e8784571c63d1a0c9f889b)
 
 分类网络看完，再看目标识别就可以了
 
